# InputHub

./: .gitignore  README.md  setup_env.sh  test_hub.sh
docs/: tech_spec.md
rime-plugin/lua/: agent_launcher.lua  ai_hint.lua
src-tauri/: Cargo.toml
src-tauri/src/: config.rs  db.rs  main.rs  types.rs
src-tauri/src/agents/: deerflow.rs  mod.rs  obsidian.rs
src-tauri/src/ipc/: http.rs  mod.rs  unix_socket.rs
src-tauri/src/llm/: claude.rs  doubao.rs  mod.rs  router.rs
